[gd_scene load_steps=8 format=3 uid="uid://hhy6swgbih74"]

[ext_resource type="Script" path="res://scenes/UI/ui.gd" id="1_co1wu"]
[ext_resource type="Theme" uid="uid://6iv8jgl5tmhm" path="res://scenes/UI/My_Game_UI_Theme.tres" id="1_h0agd"]
[ext_resource type="Texture2D" uid="uid://cgavpe0frhic7" path="res://graphics/ui/bullet.png" id="1_nkj5u"]
[ext_resource type="Texture2D" uid="uid://fcp3xmuyuul4" path="res://graphics/ui/grenade.png" id="2_vb5bk"]
[ext_resource type="Theme" uid="uid://clfgg2l1jgkn6" path="res://scenes/UI/main.tres" id="3_5uxbd"]
[ext_resource type="Texture2D" uid="uid://rficaaukfovx" path="res://graphics/ui/progress_bar/bg.png" id="5_po5n0"]
[ext_resource type="Texture2D" uid="uid://ownbtgscpiyk" path="res://graphics/ui/progress_bar/progress.png" id="6_d6me8"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_co1wu")

[node name="LaserContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -73.0
offset_right = 45.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="LaserContainer"]
layout_mode = 1
anchors_preset = -1
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="LaserContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_h0agd")
text = "20
"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="LaserContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_nkj5u")
expand_mode = 4

[node name="GrenadContainer" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.036
anchor_top = 1.0
anchor_right = 0.036
anchor_bottom = 1.0
offset_top = -70.96
offset_right = 68.1601
offset_bottom = -30.96
grow_vertical = 0
theme = ExtResource("3_5uxbd")

[node name="VBoxContainer" type="VBoxContainer" parent="GrenadContainer"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="GrenadContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_h0agd")
text = "5"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="GrenadContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_vb5bk")
expand_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -40.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 20

[node name="ProgressBar" type="TextureProgressBar" parent="MarginContainer"]
layout_mode = 2
value = 17.0
texture_under = ExtResource("5_po5n0")
texture_progress = ExtResource("6_d6me8")
